--- a/final_test/pom.xml
+++ b/final_test/pom.xml
@@ -85,6 +85,24 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+
+                    <encoding>UTF-8</encoding>
+                    <argLine>
+                        -Dfile.encoding=UTF-8
+
+                    </argLine>
+
+                    <suiteXmlFiles>
+                        <suiteXmlFile>final.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
